--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "ali-oss": "^6.22.0"
+    "ali-oss": "^6.22.0",
+    "dotenv": "^16.5.0"
   }
 }
